--- a/waybar/style.css
+++ b/waybar/style.css
@@ -15,7 +15,9 @@ window#waybar {
 #workspaces button{
     border-bottom: 3px transparent;
 }
-
+#workspaces button.urgent { /* set urgent workspaces to red(wine) */
+    border-bottom: 3px solid #722F37;
+}
 #workspaces button.active{
     /* background-color: #6D6566; */
     /* box-shadow: inset 0 -3px #ffffff; */
