--- a/waybar/style.css
+++ b/waybar/style.css
@@ -12,6 +12,23 @@ window#waybar {
     transition-property: background-color;
     transition-duration: .5s;
 }
+#tags button{
+    border-bottom: 3px transparent;
+}
+#tags button.urgent { /* set urgent workspaces to red(wine) */
+    border-bottom: 3px solid #722F37;
+}
+#tags button.active{
+    /* background-color: #6D6566; */
+    /* box-shadow: inset 0 -3px #ffffff; */
+    border-bottom: 3px solid white;
+}
+#tags button:hover {
+    border-color: transparent;
+    border-bottom: 3px solid pink;
+    /* background: inherit; */
+    /* box-shadow: inset 0 -3px #ffffff; */
+}
 #workspaces button{
     border-bottom: 3px transparent;
 }
