--- a/waybar/style.css
+++ b/waybar/style.css
@@ -12,18 +12,25 @@ window#waybar {
     transition-property: background-color;
     transition-duration: .5s;
 }
-#tags button{
+#tags button {
+    color: transparent;
+}
+#tags button.occupied{
+    color: #ffffff;
     border-bottom: 3px transparent;
 }
 #tags button.urgent { /* set urgent workspaces to red(wine) */
+    color: #ffffff;
     border-bottom: 3px solid #722F37;
 }
-#tags button.active{
+#tags button.focused{
+    color: #ffffff;
     /* background-color: #6D6566; */
     /* box-shadow: inset 0 -3px #ffffff; */
     border-bottom: 3px solid white;
 }
 #tags button:hover {
+    color: #ffffff;
     border-color: transparent;
     border-bottom: 3px solid pink;
     /* background: inherit; */
