--- a/waybar/style.css
+++ b/waybar/style.css
@@ -48,6 +48,12 @@ window#waybar {
     /* box-shadow: inset 0 -3px #ffffff; */
     border-bottom: 3px solid white;
 }
+/* sway on waybar uses the term focused and not active because its just like that */
+#workspaces button.focused{
+    /* background-color: #6D6566; */
+    /* box-shadow: inset 0 -3px #ffffff; */
+    border-bottom: 3px solid white;
+}
 #workspaces button:hover {
     border-color: transparent;
     border-bottom: 3px solid pink;
