--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,8 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
+    /* font-size: 13px; */
+    font-size: 15px;
 }
 
 window#waybar {
